--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="descriptoin" content="car windscreen repairs and replacement"/>
+		<meta name="keywords" content="car,windscreen,repair,replacement"/>
 		<title>Clearview Windscreen Crack Repairs</title>
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
 		<link href="main.css" rel="stylesheet" />
