--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8" />
@@ -260,3 +260,4 @@
 		<script src="animate.js" type="text/javascript"></script>
 	</body>
 </html>
+->
