--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8" />
@@ -10,7 +10,7 @@
 		<link href="main.css" rel="stylesheet" />
 	</head>
 
-	<body onload="scrollAnimations()">
+	<!<body onload="scrollAnimations()">
 		<div id="nav-container" class="fixed top-0 w-full bg-white/80 z-30">
 			<nav id="nav" class="lg:max-w-screen-xl text-lg mx-auto lg:flex lg:items-center font-medium">
 				<a href="#home">
@@ -257,7 +257,7 @@
 		</a>
 
 		<script src="main.js" type="text/javascript"></script>
-		<script src="animate.js" type="text/javascript"></script>
+		<script src="animate.js" type="text/javascript"></script>->
 	</body>
 </html>
-->
+
