--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>>
+<html>
+  <head>
+    <title>
+      <h1>NO site left to visit here</h1>
+    </title>
+  </head>
 
+  <body>
+    Domain name for sale
+  </body>
+</html>
